# Lumina

./: .gitignore  README.md  docker-compose.infra.yml  docker-compose.yml  package.json  pyproject.toml  seed_insights.jsonl
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  run-tests.yml
backend/: .env.example  README.md  mka_dump.dump  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  models.py  schemas.py  settings.py
backend/app/services/: audio_service.py  chat_service.py  clustering.py  graph_service.py  guardrails.py  insight_service.py  llm_client.py  pre_embedding.py  stance.py  topic_layer.py  utils.py
backend/scripts/: eval_retrieval_layer.py  eval_stance_assignment.py  recluster_topics.py  reingest_ideas.py  seed_insights.py
backend/tests/: __init__.py  test_embedding_raw_text.py  test_retrieval_stance.py
chat/: debate_agent_prompt.txt  stance_extraction_prompt.txt  support_agent_prompt.txt
clustering/: README.md  embedding_enrichment_prompt.txt  topic_extraction.txt
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  api.test.js  styles.css
frontend/src/components/: ChatPanel.jsx  InsightForm.jsx  Map3D.jsx  SidePanel.jsx
guardrails/: chat_message_guardrail_prompt.txt  submission_guardrail_prompt.txt
