[project]
name = "micro-knowledge-atlas-backend"
version = "0.1.0"
description = "Micro Knowledge Atlas backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.8",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.38",
    "psycopg[binary]==3.2.5",
    "pgvector==0.3.6",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
    "numpy==2.2.2",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = []
